tests/fixtures/invalid/float_lshift_int.py
# Cannot left shift Float and Int
x: float = 1.0 << 1
